# Ini-Config-Parser

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: ConfigEntries.h  ConfigManager.h  IniConfEntry.hpp  IniConfManager.hpp
src/: ConfigEntries.cpp  ConfigManager.cpp  IniConfEntry.cpp  IniConfManager.cpp  helper.cpp  helper.hpp
